Fix for IE8 in IE7 mode not showing the unsupported dialog.
issue #1087

--- a/resources/static/dialog/css/popup.css
+++ b/resources/static/dialog/css/popup.css
@@ -92,6 +92,7 @@ section > .contents {
 
 .error #error, #error.unsupported {
     z-index: 3;
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
     opacity: 1;
 }
 
